--- a/cart.html
+++ b/cart.html
@@ -32,20 +32,348 @@
 
   <!-- Left Catagory menu-->
 
-  <div class="catagory-menu">
+  <div id="tab" class="catagory-menu">
     <ul>
-      <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-      <li><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a></li>
-      <li><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a></li>
-      <li><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a></li>
-      <li><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a></li>
-      <li><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a></li>
+      <li id="tab1" class="activate"><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a>
+        <ul id="submenu1" class="submenu">
+          <li><a href="#">Womens</a>
+          </li>
+          <li><a href="#">Mens</a>
+          </li>
+          <li><a href="#">Kids</a>
+          </li>
+        </ul>
+      </li>
+      <li id="tab2"><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a>
+        <ul id="submenu2" class="submenu">
+          <li><a href="#">Womens</a>
+          </li>
+          <li><a href="#">Mens</a>
+          </li>
+          <li><a href="#">Kids</a>
+          </li>
+        </ul>
+      </li>
+      <li id="tab3"><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a>
+        <div id="submenu3" class="submenu">
+          <ul>
+            <li><a href="">Womens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Mens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Kids</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li id="tab4"><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a>
+        <div id="submenu4" class="submenu">
+          <ul>
+            <li><a href="">Womens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Mens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Kids</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li id="tab5"><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a>
+        <div id="submenu5" class="submenu">
+          <ul>
+            <li><a href="">Womens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Mens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Kids</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li id="tab6"><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a>
+        <div id="submenu6" class="submenu">
+          <ul>
+            <li><a href="">Womens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Mens</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="">Kids</a>
+              <div class="sub-submenu">
+                <ul>
+                  <li><a href="">Womens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Mens</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                  <li><a href="">Kids</a>
+                    <div class="sub-submenu">
+
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
     </ul>
+    <!-- <ul id="cat-manu" class="">
+      <li class=""><a>MEN</a>
+        <ul class="submenu">
+          <li><a href="products.html"><strong>T-Shirts</strong></a></li>
+          <li><a href="products.html">Casual T-Shirts</a></li>
+          <li><a href="products.html">Formal T-Shirts</a></li>
+        </ul>
+        <ul>
+          <li><a href="products.html"><strong>Shirts</strong></a></li>
+          <li><a href="products.html">Casual Shirts</a></li>
+          <li><a href="products.html">Formal Shirts</a></li>
+        </ul>
+      </li>
+      <li class=""><a> WOMEN </a>
+        <ul class="submenu">
+          <li><a href="products.html"><strong>Tops</strong></a></li>
+          <li><a href="products.html">Casual Tops</a></li>
+          <li><a href="products.html">Formal Tops</a></li>
+        </ul>
+        <ul>
+          <li><a href="products.html"><strong>Dresses</strong></a></li>
+          <li><a href="products.html">Casual Dresses</a></li>
+          <li><a href="products.html">Formal Dresses</a></li>
+        </ul>
+      </li>
+      <li class="#"><a>KIDS</a>
+        <ul class="submenu">
+          <li><a href="products.html"><strong>T-Shirts</strong></a></li>
+          <li><a href="products.html">Casual T-Shirts</a></li>
+          <li><a href="products.html">Formal T-Shirts</a></li>
+        </ul>
+        <ul>
+          <li><a href="products.html"><strong>Shirts</strong></a></li>
+          <li><a href="products.html">>Casual Shirts</a></li>
+          <li><a href="products.html">Formal Shirts</a></li>
+        </ul>
+      </li>
+    </ul> -->
     <div class="cross">
       <i class="far fa-times-circle"></i>
     </div>
   </div>
-
+ 
   <!-- Left Catagory menu end -->
 
   <!-- Header -->
@@ -61,7 +389,7 @@
             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="faS fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
           </ul>
           <p>free shiping over 1000 rupes!!</p>
         </div>
@@ -121,6 +449,7 @@
     <!-- mid-header End -->
   </div>
   <!-- Header End -->
+  
 
 
   <!-- Cart Item -->
