--- a/condition.html
+++ b/condition.html
@@ -1,42 +1,374 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Terms & condition Page</title>
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link rel="stylesheet" href="css/responsive.css" type="text/css">
-  <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
-  <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-
-  <!--favicon-->
-  <link rel="icon" type="images/favicon.png" href="images/favicon.png">
-
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Spartan:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Meghbela Mart</title>
+  
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/stellarnav.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
+    <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/lightbox.css" type="text/css">
+    <!--favicon-->
+    <link rel="icon" type="images/favicon.png" href="images/favicon.png">
+  
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Spartan:wght@100;200;300;400;500;600&display=swap"
+      rel="stylesheet">
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  
+  </head>
 
 <body class="inner-body">
 
  <!-- Left Catagory menu-->
 
- <div class="catagory-menu">
+ <div id="tab" class="catagory-menu">
   <ul>
-    <li><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a></li>
-    <li><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a></li>
-    <li><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a></li>
-    <li><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a></li>
-    <li><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a></li>
-    <li><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a></li>
+    <li id="tab1" class="activate"><a href="#"><span><img src="images/fashion.png" alt=""></span> Fashion</a>
+      <ul id="submenu1" class="submenu">
+        <li><a href="#">Womens</a>
+        </li>
+        <li><a href="#">Mens</a>
+        </li>
+        <li><a href="#">Kids</a>
+        </li>
+      </ul>
+    </li>
+    <li id="tab2"><a href="#"><span><img src="images/mobiles.png" alt=""></span> Mobiles</a>
+      <ul id="submenu2" class="submenu">
+        <li><a href="#">Womens</a>
+        </li>
+        <li><a href="#">Mens</a>
+        </li>
+        <li><a href="#">Kids</a>
+        </li>
+      </ul>
+    </li>
+    <li id="tab3"><a href="#"><span><img src="images/electronics.png" alt=""></span> Electronics</a>
+      <div id="submenu3" class="submenu">
+        <ul>
+          <li><a href="">Womens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Mens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Kids</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+    <li id="tab4"><a href="#"><span><img src="images/applineces.png" alt=""></span> Home Appliances</a>
+      <div id="submenu4" class="submenu">
+        <ul>
+          <li><a href="">Womens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Mens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Kids</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+    <li id="tab5"><a href="#"><span><img src="images/fresh_icon.png" alt=""></span> Fresh</a>
+      <div id="submenu5" class="submenu">
+        <ul>
+          <li><a href="">Womens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Mens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Kids</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
+    <li id="tab6"><a href="#"><span><img src="images/pantry.png" alt=""></span> Pantry</a>
+      <div id="submenu6" class="submenu">
+        <ul>
+          <li><a href="">Womens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Mens</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="">Kids</a>
+            <div class="sub-submenu">
+              <ul>
+                <li><a href="">Womens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Mens</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+                <li><a href="">Kids</a>
+                  <div class="sub-submenu">
+
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </li>
   </ul>
+  <!-- <ul id="cat-manu" class="">
+    <li class=""><a>MEN</a>
+      <ul class="submenu">
+        <li><a href="products.html"><strong>T-Shirts</strong></a></li>
+        <li><a href="products.html">Casual T-Shirts</a></li>
+        <li><a href="products.html">Formal T-Shirts</a></li>
+      </ul>
+      <ul>
+        <li><a href="products.html"><strong>Shirts</strong></a></li>
+        <li><a href="products.html">Casual Shirts</a></li>
+        <li><a href="products.html">Formal Shirts</a></li>
+      </ul>
+    </li>
+    <li class=""><a> WOMEN </a>
+      <ul class="submenu">
+        <li><a href="products.html"><strong>Tops</strong></a></li>
+        <li><a href="products.html">Casual Tops</a></li>
+        <li><a href="products.html">Formal Tops</a></li>
+      </ul>
+      <ul>
+        <li><a href="products.html"><strong>Dresses</strong></a></li>
+        <li><a href="products.html">Casual Dresses</a></li>
+        <li><a href="products.html">Formal Dresses</a></li>
+      </ul>
+    </li>
+    <li class="#"><a>KIDS</a>
+      <ul class="submenu">
+        <li><a href="products.html"><strong>T-Shirts</strong></a></li>
+        <li><a href="products.html">Casual T-Shirts</a></li>
+        <li><a href="products.html">Formal T-Shirts</a></li>
+      </ul>
+      <ul>
+        <li><a href="products.html"><strong>Shirts</strong></a></li>
+        <li><a href="products.html">>Casual Shirts</a></li>
+        <li><a href="products.html">Formal Shirts</a></li>
+      </ul>
+    </li>
+  </ul> -->
   <div class="cross">
     <i class="far fa-times-circle"></i>
   </div>
@@ -46,75 +378,75 @@
 
 <!-- Header -->
 <div class="header sticky-top">
-<!-- Top Header -->
-<div class="top-header">
-  <div class="row">
-    <div class="col-md-6 top-left">
-      <div id="catagories" class="catagories">
-        <a href="javascript:void(0)"><i class="fa fa-bars"></i></a>
-      </div>
-      <ul>
-        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-      </ul>
-      <p>free shiping over 1000 rupes!!</p>
-    </div>
-    <div class="col-md-6 top-right">
-      <div class="user-login">
+  <!-- Top Header -->
+  <div class="top-header">
+    <div class="row">
+      <div class="col-md-6 top-left">
+        <div id="catagories" class="catagories">
+          <a href="javascript:void(0)"><i class="fa fa-bars"></i></a>
+        </div>
         <ul>
-          <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
+          <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
+        <p>free shiping over 1000 rupes!!</p>
       </div>
-      <div class="search_form">
-        <form action="#">
-          <input class="search_filed" type="text" placeholder="Search Products & Brands">
-          <input class="search_btn" type="submit" value="Search">
-        </form>
+      <div class="col-md-6 top-right">
+        <div class="user-login">
+          <ul>
+            <li class="signin"><a href="login-page.html"><i class="fa fa-user"></i> Sign In / Sign Up</a></li>
+          </ul>
+        </div>
+        <div class="search_form">
+          <form action="#">
+            <input class="search_filed" type="text" placeholder="Search Products & Brands">
+            <input class="search_btn" type="submit" value="Search">
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- End -->
-<!-- mid Header -->
-<div class="mid-header">
-  <div class="row">
-    <div class="col-md-2 mid-left">
-      <a href="index.html"><img src="images/logo.png" alt=""></a>
-    </div>
-    <div class="col-md-10 mid-right">
-      <div class="menu">
-        <ul class="menu-nav">
+  <!-- End -->
+  <!-- mid Header -->
+  <div class="mid-header">
+    <div class="row">
+      <div class="col-md-2 mid-left">
+        <a href="index.html"><img src="images/logo.png" alt=""></a>
+      </div>
+      <div class="col-md-10 mid-right">
+        <div class="menu">
+          <ul class="menu-nav">
             <li>
-                <a href="about-us.html">About</a>
+              <a href="about-us.html">About</a>
             </li>
-            <li>
-                <a href="condition.html">Terms</a>
-                <ul>
-                  <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demo</a></li>
-                  <li><a href="#">Demo</a></li>
+            <li class="active">
+              <a href="condition.html">Terms</a>
+              <ul>
+                <li><a href="#">Demo</a></li>
+                <li><a href="#">Demo</a></li>
+                <li><a href="#">Demo</a></li>
               </ul>
             </li>
             <li>
-                <a href="policy.html">Privacy Policy</a>
+              <a href="policy.html">Privacy Policy</a>
             </li>
             <li>
-                <a href="faqs.html">FAQ</a>
+              <a href="faqs.html">FAQ</a>
             </li>
             <li>
-                <a href="contact-us.html">Contact</a>
+              <a href="contact-us.html">Contact</a>
             </li>
-        </ul>
-      </div>
-      <div class="page-btn green">
-        <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+          </ul>
+        </div>
+        <div class="page-btn">
+          <a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart(1)</a>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- mid-header End -->
+  <!-- mid-header End -->
 </div>
 <!-- Header End -->
 <!-- Banner -->
