--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
   </section>
   <!-- side banner and Products End -->
   <!-- Mini banner -->
-  <section class="page-sort-banner">
+  <section id="dif-bg" class="page-sort-banner">
     <div class="common_space mini-ban">
       <div class="miniban-left-con">
         <div class="ban-content">
@@ -794,7 +794,7 @@
       <div class="miniban-right-con">
         <div class="ban-image">
           <figure>
-            <img src="images/banner-box2.jpg" alt="">
+            <img src="images/woman-chosing-white-shirt.jpg" alt="">
           </figure>
         </div>
       </div>
