--- a/policy.html
+++ b/policy.html
@@ -16,12 +16,11 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css" type="text/css">
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
     <link rel="stylesheet" href="css/lightbox.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery.jqZoom.css" type="text/css"/>
     <!--favicon-->
     <link rel="icon" type="images/favicon.png" href="images/favicon.png">
   
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Oswald:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&family=Spartan:wght@100;200;300;400;500;600&display=swap"
       rel="stylesheet">
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -431,7 +430,7 @@
                   <li><a href="#">Demo</a></li>
                 </ul>
               </li>
-              <li>
+              <li class="active">
                 <a href="policy.html">Privacy Policy</a>
               </li>
               <li>
